# custom_plugins

./: .gitignore  README.md  emoji.py  emoji.txt  people_like模块目前实现功能.md  pyproject.toml  requirements.txt  runscp.py  向量数据库分析文本方案.md
.github/workflows/: python-runner.yml  ssh-deploy.yml  ssh-sparse-deploy.yml
common/: __init__.py  permission.py  rule.py  struct.py
direct_plugins/people_like/: __init__.py  config.py  do_not_send.txt  emoji.txt  image_send.py  milvus_action.py  model.py  notice_proc.py  setting.py  task.py  vector.py
direct_plugins/people_like/migrations/: 02b84c026502_add_mime_type_column.py  0cd27cbc283a_add_emojiinfostorer_table.py  50ff9b8e6fac_add_groupmemberimpression_table.py  65bfa681bf23_add_remote_file_name_cloumn.py  697b8ef25748_init_db.py  ae735f870da6_add_summary_column.py  b12db5a4353d_add_groupmsg_table.py  dca2bd08f07e_remove_fileuri_remotefilename.py  f93a7ac102cd_set_message_id_nullable.py
forward_plugins/approve_friend/: __init__.py
forward_plugins/ban_image/: __init__.py  model.py
forward_plugins/ban_image/migrations/: 7844a03326d1_init_db.py
forward_plugins/ban_super_emoji/: __init__.py  super_emojis.txt
forward_plugins/mute_all/: __init__.py  config.py
forward_plugins/schedule_ban/: __init__.py
forward_plugins/set_admin/: __init__.py
forward_plugins/set_title/: __init__.py
forward_plugins/snapshot/: __init__.py
no_deploy/: remove_file.py  test.py
no_deploy/ban_super_emoji/: __init__.py  config.py
no_deploy/handle_self/: __init__.py  config.py
no_deploy/nonebot_plugin_debounce/: __init__.py
no_deploy/nonebot_plugin_shellcrash/: command.py  model.py
no_deploy/nonebot_plugin_throttle/: __init__.py  config.py
no_deploy/russian_ban/: __init__.py  command.py  decorator.py  metadata.py  model.py  rule.py
plugin/ban_image/: __init__.py  algorithm.py  metadata.py  model.py  struct.py
plugin/ban_image/migrations/: 578a2ee2cb89_add_index.py
plugin/common/: struct.py
plugin/russian_ban/: __init__.py  command.py  config.py  decorator.py  metadata.py  schedule.py
plugin/russian_ban/migrations/: a044fb7fd863_create_schedule_table.py  a19fed360ed7_init_db.py
plugin/sl_long/: __init__.py
plugins/approve_friend/: __init__.py
plugins/ban_image/: __init__.py  struct.py
plugins/common/: __init__.py
plugins/delete_msg/: __init__.py
plugins/mute_all/: __init__.py
plugins/nonebot_plugin_shellcrash/: __init__.py  command.py  config.py  model.py
plugins/people_like/: __init__.py  config.py  do_not_send.txt  model.py  setting.py
plugins/russian_ban/: __init__.py  command.py  schedule.py
plugins/snapshot/: __init__.py  browser.py
