[project]
name = "custom_plugins"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "reine-ishyanami", email = "2402979195@qq.com"},
]
dependencies = [
    "nonebot2[fastapi]>=2.3.1",
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-waiter>=0.6.2",
]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugin"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
